[package]
name = "rust-ml-helpers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
rust-stemmers = "1.2.0"
vtext = "0.2.0"
stopwords = "0.1.0"
serde = {version = "1.0.144", features = ["derive"]}
bincode = "1.3.3"